# QR_BAR_CodeGen

./: BarCodeEncoderDecoder.cpp  BarCodeEncoderDecoder.h  BarCodeEncoderDecoder.pro  BarCodeEncoderDecoder.ui  CMakeLists.txt  Doxy_QR_BAR  Doxy_QR_BAR.bak  Doxy_QR_BAR_1  QR_BarCodeEncoder.cpp  QR_BarCodeEncoder.h  QR_BarCodeEncoder.pro  QR_BarCodeEncoder.ui  QR_BarCodeEncoderDecoder.cpp  QR_BarCodeEncoderDecoder.h  QR_BarCodeEncoderDecoder.ui  README.md  code128.c  code128.h  main.cpp  qrcodegen.cpp  qrcodegen.h
Python_code/: upi_qr_generate.py
QR_BarCodeGen/: CMakeLists.txt
QZQrdecode_sourceV2.0/: CMakeLists.txt  CameraImageWrapper.h  QZqrDecode.cpp  QZqrDecode.h  QZqrDecode.pri  QZqrDecode_global.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/: BarcodeFormat.cpp  BarcodeFormat.h  Binarizer.cpp  Binarizer.h  BinaryBitmap.cpp  BinaryBitmap.h  ChecksumException.cpp  ChecksumException.h  DecodeHints.cpp  DecodeHints.h  Exception.cpp  Exception.h  FormatException.cpp  FormatException.h  IllegalStateException.h  InvertedLuminanceSource.cpp  InvertedLuminanceSource.h  LuminanceSource.cpp  LuminanceSource.h  MultiFormatReader.cpp  MultiFormatReader.h  NotFoundException.h  Reader.cpp  Reader.h  ReaderException.h  Result.cpp  Result.h  ResultIO.cpp  ResultPoint.cpp  ResultPoint.h  ResultPointCallback.cpp  ResultPointCallback.h  WriterException.h  ZQrdecode.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/aztec/: AztecDetectorResult.cpp  AztecDetectorResult.h  AztecReader.cpp  AztecReader.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/aztec/decoder/: AztecDecoder.cpp  Decoder.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/aztec/detector/: AztecDetector.cpp  Detector.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/common/: Array.h  BitArray.cpp  BitArray.h  BitArrayIO.cpp  BitMatrix.cpp  BitMatrix.h  BitSource.cpp  BitSource.h  CharacterSetECI.cpp  CharacterSetECI.h  Counted.h  DecoderResult.cpp  DecoderResult.h  DetectorResult.cpp  DetectorResult.h  GlobalHistogramBinarizer.cpp  GlobalHistogramBinarizer.h  GreyscaleLuminanceSource.cpp  GreyscaleLuminanceSource.h  GreyscaleRotatedLuminanceSource.cpp  GreyscaleRotatedLuminanceSource.h  GridSampler.cpp  GridSampler.h  HybridBinarizer.cpp  HybridBinarizer.h  IllegalArgumentException.cpp  IllegalArgumentException.h  PerspectiveTransform.cpp  PerspectiveTransform.h  Point.h  Str.cpp  Str.h  StringUtils.cpp  StringUtils.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/common/detector/: JavaMath.h  MathUtils.h  MonochromeRectangleDetector.cpp  MonochromeRectangleDetector.h  WhiteRectangleDetector.cpp  WhiteRectangleDetector.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/common/reedsolomon/: GenericGF.cpp  GenericGF.h  GenericGFPoly.cpp  GenericGFPoly.h  ReedSolomonDecoder.cpp  ReedSolomonDecoder.h  ReedSolomonException.cpp  ReedSolomonException.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/datamatrix/: DataMatrixReader.cpp  DataMatrixReader.h  DataMatrixVersion.cpp  Version.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/datamatrix/decoder/: BitMatrixParser.h  DataBlock.h  DataMatrixBitMatrixParser.cpp  DataMatrixDataBlock.cpp  DataMatrixDecodedBitStreamParser.cpp  DataMatrixDecoder.cpp  DecodedBitStreamParser.h  Decoder.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/datamatrix/detector/: CornerPoint.h  DataMatrixCornerPoint.cpp  DataMatrixDetector.cpp  DataMatrixDetectorException.cpp  Detector.h  DetectorException.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/multi/: ByQuadrantReader.cpp  ByQuadrantReader.h  GenericMultipleBarcodeReader.cpp  GenericMultipleBarcodeReader.h  MultipleBarcodeReader.cpp  MultipleBarcodeReader.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/multi/qrcode/: QRCodeMultiReader.cpp  QRCodeMultiReader.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/multi/qrcode/detector/: MultiDetector.cpp  MultiDetector.h  MultiFinderPatternFinder.cpp  MultiFinderPatternFinder.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/oned/: CodaBarReader.cpp  CodaBarReader.h  Code128Reader.cpp  Code128Reader.h  Code39Reader.cpp  Code39Reader.h  Code93Reader.cpp  Code93Reader.h  EAN13Reader.cpp  EAN13Reader.h  EAN8Reader.cpp  EAN8Reader.h  ITFReader.cpp  ITFReader.h  MultiFormatOneDReader.cpp  MultiFormatOneDReader.h  MultiFormatUPCEANReader.cpp  MultiFormatUPCEANReader.h  OneDReader.cpp  OneDReader.h  OneDResultPoint.cpp  OneDResultPoint.h  UPCAReader.cpp  UPCAReader.h  UPCEANReader.cpp  UPCEANReader.h  UPCEReader.cpp  UPCEReader.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/pdf417/: PDF417Reader.cpp  PDF417Reader.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/pdf417/decoder/: BitMatrixParser.h  DecodedBitStreamParser.h  Decoder.h  PDF417BitMatrixParser.cpp  PDF417DecodedBitStreamParser.cpp  PDF417Decoder.cpp
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/pdf417/decoder/ec/: ErrorCorrection.cpp  ErrorCorrection.h  ModulusGF.cpp  ModulusGF.h  ModulusPoly.cpp  ModulusPoly.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/pdf417/detector/: Detector.h  LinesSampler.cpp  LinesSampler.h  PDF417Detector.cpp
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/qrcode/: ErrorCorrectionLevel.h  FormatInformation.h  QRCodeReader.cpp  QRCodeReader.h  QRErrorCorrectionLevel.cpp  QRFormatInformation.cpp  QRVersion.cpp  Version.h
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/qrcode/decoder/: BitMatrixParser.h  DataBlock.h  DataMask.h  DecodedBitStreamParser.h  Decoder.h  Mode.h  QRBitMatrixParser.cpp  QRDataBlock.cpp  QRDataMask.cpp  QRDecodedBitStreamParser.cpp  QRDecoder.cpp  QRMode.cpp
QZQrdecode_sourceV2.0/zqrdecode/zqrdecode/qrcode/detector/: AlignmentPattern.h  AlignmentPatternFinder.h  Detector.h  FinderPattern.h  FinderPatternFinder.h  FinderPatternInfo.h  QRAlignmentPattern.cpp  QRAlignmentPatternFinder.cpp  QRDetector.cpp  QRFinderPattern.cpp  QRFinderPatternFinder.cpp  QRFinderPatternInfo.cpp
QZXing_sourceV2.4/: CMakeLists.txt
docs/html/: _alignment_pattern_8h.html  _alignment_pattern_8h__dep__incl.map  _alignment_pattern_8h__dep__incl.md5  _alignment_pattern_8h__incl.map  _alignment_pattern_8h__incl.md5  _alignment_pattern_8h_source.html  _alignment_pattern_finder_8h.html  (+2815 more)
(+188 files in other folders)
